last year sessions added

--- a/src/elements/featured-videos.html
+++ b/src/elements/featured-videos.html
@@ -133,9 +133,9 @@
                   sizing="cover"
                   preload fade
                 ></iron-image>
-                <div class="play-video" on-tap="_playVideo">
+                <!--<div class="play-video" on-tap="_playVideo">
                   <iron-icon class="play-icon" icon="icons:play"></iron-icon>
-                </div>
+                </div>-->
               </div>
               <div class="paper-card-container">
                 <div class="card-content list">
@@ -147,11 +147,11 @@
           </div>
         </template>
       </div>
-      <div layout>
+      <!--<div layout>
         <a href$="[[app.data.videosSessionsUrl]]" class="block-link" target="_blank" rel="noopener noreferrer">
           <paper-button>[[localize('featured-videos-view-all')]]</paper-button>
         </a>
-      </div>
+      </div> -->
     </div>
 
   </template>
