TTS style added

--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -45,6 +45,7 @@
         --efficient :#3cba54;
         --secure :#f4c20d;
         --tidy: #4885ed;
+        --tts :#FF33B2;
         --web: #2196f3;
         --cloud: #751DA5;
         --community: #e91e63;
