--- a/src/elements/footer-block.html
+++ b/src/elements/footer-block.html
@@ -168,7 +168,7 @@
       <div class="footer-content">
         <iron-image
           class="gdg-logo"
-          src="/images/gdg-logo.svg"
+          src="/images/gdg-logo.png"
           sizing="contain"
           alt="[[app.data.organizer.name]]"
         ></iron-image>
