--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 
     window.HOVERBOARD = window.HOVERBOARD || {};
-    window.ENV = 'dev';
+    window.ENV = 'prod';
     window.PREFIX = '/';
 
     // setup Polymer options
@@ -107,7 +107,7 @@
 
     // Creates the tracker.
     ga('create', {
-      trackingId: window.ENV === 'prod' ? 'UA-43643469-8' : 'UA-43643469-9',
+      trackingId: window.ENV === 'prod' ? 'UA-75655731-4' : 'UA-43643469-9',
       cookieDomain: 'auto',
       cookiePath: window.ENV !== 'dev' ? window.PREFIX || '/' : null,
       siteSpeedSampleRate: 10 // 10% of users.
